--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <!-- Generated Trip Plan -->
             <div id="trip-plan" class="trip-plan hidden">
-                <h3 class="plan-title">✨ Your Trip Plan</h3>
+                <h3 class="plan-title">Your Trip Plan</h3>
                 <div class="plan-grid">
                     <div class="plan-card">
                         <h4><i data-lucide="plane"></i> Flights</h4>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="form-group">
                             <label>Phone</label>
-                            <input type="tel" value="+1 (555) 123-4567">
+                            <input type="tel" value="+91 9876543210">
                         </div>
                     </div>
                     
@@ -164,9 +164,9 @@
                         <div class="form-group">
                             <label>Preferred Budget Range</label>
                             <select>
-                                <option>$1,000 - $3,000</option>
-                                <option>$3,000 - $5,000</option>
-                                <option>$5,000+</option>
+                                <option>₹1,000 - ₹3,000</option>
+                                <option>₹3,000 - ₹5,000</option>
+                                <option>₹5,000+</option>
                             </select>
                         </div>
                         <div class="form-group">
