--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="stat-label">Countries Visited</div>
                     </div>
                     <div class="stat-card stat-purple">
-                        <div class="stat-number">$24k</div>
+                        <div class="stat-number">₹24k</div>
                         <div class="stat-label">Total Saved</div>
                     </div>
                 </div>
